--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Form</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="coding.png" type="image/x-icon">
+    <link rel="shortcut icon" href="coding1.png" type="image/x-icon">
     <script src="script.js" defer></script> <!-- Defer to load script after HTML -->
 </head>
 <body class="body1">
