--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="script.js" defer></script> <!-- Defer to load script after HTML -->
 </head>
 <body class="body1">
+        <h1>
+            Tara shat mga Hooo!
+        </h1>
     <fieldset class="fieldset">
         <legend>Sign Up</legend>
         <form id="signUpForm" action="login.html" method="post">
