--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <label>Mobile number or  Email</label><br>
             <input  class="input" type="email" placeholder="Mobile number or  Email" required><br>
             <label>Password</label><br>
-            <input  class="input" type="password" name="password" placeholder="New password" required><br>
+            <input  class="input" type="password" name="password" placeholder="Password" required><br>
 
             <label>Confirm Password</label><br>
             <input class="input" type="password" name="password" placeholder="Confirm password" required><br>
